Updates to the website

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -59,6 +59,8 @@
 
 <p>The RMC Robotics Club is a club that does robotics at RMC.</p>
 
+<p>We meet every Monday and Tuesday at 19h00, sometimes to work on robots, sometimes to attend workshops to improve our general &lsquo;making&rsquo; skills.</p>
+
 </div>
 
 
