New post, cleaned up local file madness

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -41,7 +41,7 @@
     <nav>
       <ul class="sidebar-nav">
         <li><a href="http://robo.segfaults.net/">Home</a> </li>
-        <li><a href="/about/"> About Us </a></li><li><a href="/contact-us/"> Contact Us </a></li><li><a href="/posts/"> Posts </a></li><li><a href="/workshops/"> Workshops </a></li>
+        <li><a href="/about/"> About Us </a></li><li><a href="/contact-us/"> Contact Us </a></li><li><a href="/posts/"> Posts </a></li><li><a href="/resources/"> Resources </a></li><li><a href="/workshops/"> Workshops </a></li>
       </ul>
     </nav>
 
@@ -60,6 +60,8 @@
 <p>The RMC Robotics Club is a club that does robotics at RMC.</p>
 
 <p>We meet every Monday and Tuesday at 19h00, sometimes to work on robots, sometimes to attend workshops to improve our general &lsquo;making&rsquo; skills.</p>
+
+<p>Soon we hope to be hosting an internal competition to quickly learn as much as we can about the real types of decisions and considerations that must be made when building a robot with a deadline!</p>
 
 </div>
 
