--- a/public/workshops/3d-printing/index.html
+++ b/public/workshops/3d-printing/index.html
@@ -41,7 +41,7 @@
     <nav>
       <ul class="sidebar-nav">
         <li><a href="http://robo.segfaults.net/">Home</a> </li>
-        <li><a href="/about/"> About Us </a></li><li><a href="/contact-us/"> Contact Us </a></li><li><a href="/posts/"> Posts </a></li><li><a href="/workshops/"> Workshops </a></li>
+        <li><a href="/about/"> About Us </a></li><li><a href="/contact-us/"> Contact Us </a></li><li><a href="/posts/"> Posts </a></li><li><a href="/resources/"> Resources </a></li><li><a href="/workshops/"> Workshops </a></li>
       </ul>
     </nav>
 
@@ -58,6 +58,8 @@
 <h1 id="goal">Goal</h1>
 
 <p>To design and build/print a thingamajig for the Robo Club</p>
+
+<p>The parts that have been made so far are stored in <a href="https://drive.google.com/drive/folders/1p3KEBeuUeoSDM_l_yLE4DOLT9fUCriH5">this folder</a></p>
 
 <h2 id="what">What?</h2>
 
